testsuite/tests/grammar/invalid_lexers/rule_2.lkt
lexer foo_lexer {
    lexing_failure <- "example"
}

grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
